# zeromcp-go

./: Dockerfile  README.md  go.mod
.github/workflows/: publish-csharp.yml  publish-go.yml  publish-java.yml  publish-kotlin.yml  publish-node.yml  publish-php.yml  publish-python.yml  publish-ruby.yml  publish-rust.yml  publish-swift.yml
benchmarks/: harness-timeseries.js  harness.js  report.js  run-all.sh
benchmarks/csharp/: Dockerfile  config.json
benchmarks/go/: Dockerfile  config.json
benchmarks/java/: Dockerfile  config.json
benchmarks/kotlin/: Dockerfile  config.json
benchmarks/node/: Dockerfile  config-timeseries-quick.json  config-timeseries.json  config.json
benchmarks/php/: Dockerfile  config.json
benchmarks/python/: Dockerfile  config.json  official.py
benchmarks/results/: node-timeseries.json
benchmarks/ruby/: Dockerfile  config.json
benchmarks/rust/: Dockerfile  config.json
benchmarks/rust/official/: Cargo.toml
benchmarks/rust/official/src/: main.rs
benchmarks/swift/: Dockerfile  config.json
cmd/zeromcp/: main.go
csharp/: README.md
csharp/BypassTest/: Program.cs
csharp/ChaosTest/: Program.cs
csharp/CredentialTest/: Program.cs
csharp/SandboxTest/: Program.cs
csharp/TimeoutTest/: Program.cs  TimeoutTest.csproj
csharp/ZeroMcp/: Config.cs  (+4 more)
go/: README.md
java/: README.md  pom.xml
ruby/: README.md  zeromcp.gemspec
rust/: Cargo.toml  README.md
rust/examples/: bypass_test.rs  chaos_test.rs  credential_test.rs  sandbox_test.rs  timeout_test.rs
rust/src/: config.rs  server.rs  types.rs
scripts/: release.sh
(+157 files in other folders)
