[package]
name = "mcp-bench-official"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "1", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

[profile.release]
opt-level = 3
